src/test/resources/syntax_errors/no_braces_around_body.notc
void main()
    int a = 4;
    return;
